--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.0.1",
     "client-sessions": "^0.8.0",
     "decimal.js": "^10.3.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "migrate": "^1.7.0",
